Add selfAttach to test JVM, update years