@@ -1,6 +1,6 @@
 <!--
 
-    Copyright © 2013-2017, The SeedStack authors <http://seedstack.org>
+    Copyright © 2013-2018, The SeedStack authors <http://seedstack.org>
 
     This Source Code Form is subject to the terms of the Mozilla Public
     License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -14,7 +14,7 @@
     <parent>
         <groupId>org.seedstack.poms</groupId>
         <artifactId>poms</artifactId>
-        <version>3.1.1-SNAPSHOT</version>
+        <version>3.1.2-SNAPSHOT</version>
     </parent>
 
     <artifactId>parent-internal</artifactId>
@@ -94,7 +94,7 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${maven-surefire-plugin.version}</version>
                     <configuration>
-                        <argLine>-Xmx1024m -XX:MaxPermSize=256m ${argLine}</argLine>
+                        <argLine>-Djdk.attach.allowAttachSelf -Xmx1024m -XX:MaxPermSize=256m ${argLine}</argLine>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -102,7 +102,7 @@
                     <artifactId>maven-failsafe-plugin</artifactId>
                     <version>${maven-failsafe-plugin.version}</version>
                     <configuration>
-                        <argLine>-Xmx1024m -XX:MaxPermSize=256m ${argLine}</argLine>
+                        <argLine>-Djdk.attach.allowAttachSelf -Xmx1024m -XX:MaxPermSize=256m ${argLine}</argLine>
                         <systemProperties>
                             <java.awt.headless>true</java.awt.headless>
                             <tomcat.http.port>${tomcat.http.port}</tomcat.http.port>
